# ChangeLog for x11-libs/qt-test
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-test/ChangeLog,v 1.51 2009/11/11 14:38:07 yngwin Exp $

  11 Nov 2009; Ben de Groot <yngwin@gentoo.org> -qt-test-4.4.2.ebuild,
  -qt-test-4.5.1.ebuild, -qt-test-4.5.2.ebuild, -qt-test-4.5.3.ebuild:
  Remove obsolete versions

  10 Nov 2009; Jeroen Roovers <jer@gentoo.org> qt-test-4.5.3-r1.ebuild:
  Stable for HPPA (bug #290922).

  09 Nov 2009; Joseph Jezak <josejx@gentoo.org> qt-test-4.5.3-r1.ebuild:
  Marked ppc/ppc64 stable for bug #290922.

  09 Nov 2009; Raúl Porcel <armin76@gentoo.org> qt-test-4.5.3-r1.ebuild:
  alpha/ia64/sparc stable wrt #290922

  09 Nov 2009; Markus Meier <maekke@gentoo.org> qt-test-4.5.3-r1.ebuild:
  arm stable, bug #290922

  31 Oct 2009; Markus Meier <maekke@gentoo.org> qt-test-4.5.3-r1.ebuild:
  amd64 stable, bug #290922

  31 Oct 2009; Markus Meier <maekke@gentoo.org> qt-test-4.5.3-r1.ebuild:
  x86 stable, bug #290922

*qt-test-4.5.3-r1 (29 Oct 2009)

  29 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> +qt-test-4.5.3-r1.ebuild,
  +files/qt-4.5.3-glib-event-loop.patch:
  Adding a patch to fix regression in event loop

  29 Oct 2009; Christian Faulhammer <fauli@gentoo.org> qt-test-4.5.3.ebuild:
  stable x86, bug 290922

  16 Oct 2009; Alex Alexander <wired@gentoo.org> qt-test-4.6.0_beta1.ebuild:
  added keywords: ~alpha ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86-fbsd

*qt-test-4.6.0_beta1 (16 Oct 2009)

  16 Oct 2009; Alex Alexander <wired@gentoo.org>
  +qt-test-4.6.0_beta1.ebuild:
  added version 4.6.0_beta1

  11 Oct 2009; Raúl Porcel <armin76@gentoo.org> qt-test-4.5.2.ebuild:
  alpha/ia64/sparc stable wrt #286653

  09 Oct 2009; Markus Meier <maekke@gentoo.org> qt-test-4.5.2.ebuild:
  amd64/arm/x86 stable, bug #286653

  07 Oct 2009; nixnut <nixnut@gentoo.org> qt-test-4.5.2.ebuild:
  ppc stable #286653

*qt-test-4.5.3 (04 Oct 2009)
