@@ -1,20 +1,9 @@
 AUX qt-4.5-nolibx11.diff 1167 RMD160 da983a70bd436d35e325203dfe9390b2aee925ae SHA1 ee916596e422e91179458778b013fb103dc97cac SHA256 c6c686c1cfc07caefafe697eb8b02b6806f3845f20d3fd3839301d8a94259b0b
 AUX qt-4.5.3-glib-event-loop.patch 770 RMD160 0b854962f1b46958e8b969f949fe5e0d6e66b5ff SHA1 26543a05f894678fd1357d7b0fca217dac6b1a0c SHA256 83f010690d3a7220f5bd559b2aa82d9135d31a2c04bf9d6b12ed78a2dd3da6bb
-DIST qt-everywhere-opensource-src-4.6.0-beta1.tar.gz 154892235 RMD160 aa3df8dc0ea601f73abe624f376cf3df032d77d1 SHA1 ab3898f0d7307decbce03a6fc6829218bba17311 SHA256 033bdd4bc1d371ea21b03098a8276d957ecc535725fa1122d17220d47f15e9ee
-DIST qt-mac-opensource-src-4.4.2.tar.bz2 100715282 RMD160 6c92c2d745ca75fc9779f360825a48c29689ff61 SHA1 217e2d4f80d1c6d68d6bdfe8c757b2bfee929421 SHA256 1191d87e55a718a6cd2d20c2cf43f93ca98de5aebfa49152ef2551ee36914e56
-DIST qt-mac-opensource-src-4.5.1.tar.bz2 112558395 RMD160 eaab3d822c5a752c800e4b654cf45ef0b4b18f81 SHA1 c658aa96b715b5242d415d8b05eb81968dfaea67 SHA256 5bdfe81e0955614827550a19856c5e97af7586e06474a602ae66640fad000116
-DIST qt-mac-opensource-src-4.5.2.tar.bz2 113874121 RMD160 245efc87416788f37b4b660153a53848308d822f SHA1 da62223757a8c61c8f0e895631bb6ff06beae229 SHA256 ca990057b54f43abe0647bbd1cc7f25945e97c86caee46310d2c3be95aa7dd53
+DIST qt-everywhere-opensource-src-4.6.0-rc1.tar.gz 153619571 RMD160 9ba13ba9aa99d3674b3bbc34601c7a34812c0701 SHA1 2fb07479c639fc2f98be0f9b65b0d179e4c637f7 SHA256 28649e0bd086783f3c960d9427298e1231c9eb44cb2c9ddad20cb3e60475c527
 DIST qt-mac-opensource-src-4.5.3.tar.gz 123311631 RMD160 290fecbe8698ead4f884617ae4dd20b37663545e SHA1 566a9c45b261447c07c784b9317c9b5aae1ccbd8 SHA256 1bca03b2355e686ae7184d98c4da1d60689732754407886cefff4288b28c6f34
-DIST qt-x11-opensource-src-4.4.2-headers.tar.bz2 2509611 RMD160 3424d4049f1c06959bd57a98e3933636515c60fa SHA1 f0945230b8856b446f03473c18474e9224b30fcf SHA256 aa02d9e2c017ff92d91ef73781d4d1a28be53136886ac99275df053fe31d1fff
-DIST qt-x11-opensource-src-4.4.2.tar.bz2 102816706 RMD160 5719ab5800ca181417e0dff7f961af7b371ddd97 SHA1 0bc56934565f529a2708533a4f160fbc87b9d9e0 SHA256 0530fefc452e5029877739164e133de7df5faa519b0fb3d9fcf40b467350c675
-DIST qt-x11-opensource-src-4.5.1.tar.bz2 114667436 RMD160 702d7c6bb9787cd5602dcb8afce52bdfcfd52179 SHA1 50ba9b6d2eb7056e47dc53775be509c4ff6ec015 SHA256 b994c40e41386c9d82f025dd9198e1161717021216680adef97da3f1b8947c75
-DIST qt-x11-opensource-src-4.5.2.tar.bz2 116015284 RMD160 1af31d7fe66665e718f0c728b41becea9996fba7 SHA1 bf2dd175cade15f3f505fe6aac1401bdbfeb4e5b SHA256 d26d94c9cb90dfe16a13b39ac7157f66ec9f5fbbf9d7faa57f7466157721f836
 DIST qt-x11-opensource-src-4.5.3.tar.gz 125384668 RMD160 93d765ecf89ed15668a4eedc7d77c2a2e41424a2 SHA1 78620ffd03c83c4d86f5039ccf7b09e5c709ed25 SHA256 0c87fc42825d3556970db4412257c6874e716ac3bc45e6f273924d5d6a089aa6
-EBUILD qt-test-4.4.2.ebuild 1103 RMD160 8df110554d42f7ea5cd0284cec173b5e24334e31 SHA1 35de67f1697eec0afb561b7e46764e2473b67f16 SHA256 d5f7d2efe67f3167a19e8cb81482d8e638d93a4e712bfc78912be0e79e3479c4
-EBUILD qt-test-4.5.1.ebuild 1073 RMD160 7bdd5db822138ee89ae9332d6ded9891d53c604b SHA1 e884be5c29ec381cc1777bc995cbed2c6e7b5b0e SHA256 48f2b3da8ee0bb944a058b70029e77b7fc09cb16dd7b249e36771ba512c0898f
-EBUILD qt-test-4.5.2.ebuild 1121 RMD160 8322828e73f8e184930de6f6527eae0bdac4b415 SHA1 84caf3f7a6c2acb88db8135710a97c9b092230cb SHA256 bc986ae6d9638978bb7fa29f2165316eb904959df787ba52ded90eab60520c06
 EBUILD qt-test-4.5.3-r1.ebuild 1166 RMD160 da1adeac5dbf60a41ca25ae7e1140ef7cfd732d4 SHA1 a6a75b2fcdc4855d8dbe541b801ecadebf912759 SHA256 ddd1e99f77fb200a3dc394bfd8568cc672390ff0e4f029e47f6e4165a3173a04
-EBUILD qt-test-4.5.3.ebuild 1119 RMD160 9d05d681cd341bc26d41562e395c4baa6adc057d SHA1 73ac82142b4dffb62712754b99858c88ec37ff35 SHA256 4d7ff8afeca17c3bb3dca03d32aa7c9f0709c2ac62099c00613db9c6ab5cab26
-EBUILD qt-test-4.6.0_beta1.ebuild 1076 RMD160 dc42a18ef5589bac3b3a5a7333647aa6365e8725 SHA1 5b4c6cd65b1c63cfa52ad3bba480bd638bea06ec SHA256 ecfd5694e5787a46cf2f7fcc6e3e11b49df3186f5250ea49f3379c311198b69e
-MISC ChangeLog 6303 RMD160 fea56363a071e8d99d5a002bfeb5a466b18cb334 SHA1 1bf86eaa7ae374233ca27d68fb018fa02ca241e9 SHA256 5bfe8be5e5e27fcf60f3c75b4e88bd154abb84efbbe5f32791f3f3ec6d8a81f0
+EBUILD qt-test-4.6.0_rc1.ebuild 1074 RMD160 82ac33293511cc01505778939833a026eff61172 SHA1 e4500e6f3bfeadc2fc102c17f4b0aa22ee58d2da SHA256 bda1fc2e2e225d8df61633b6f36931d75a95edfb4223e6052665fef7bcb7ce88
+MISC ChangeLog 6483 RMD160 a89b9dbd52fb91777ec1892a44d17bed426a08c8 SHA1 67ff3c628c0581b49d32c3ef2d3eb32b53573235 SHA256 3441113c9995e90156521fea80e8506d22f65a7a99d51ef0b3206421bd19d951
 MISC metadata.xml 156 RMD160 d76590850d56864c8d99e6877ed15841b55ef1fc SHA1 e872bab086832a9db3f0fa9b1897c70577d3af21 SHA256 94c4f580c1a55f8a5e1a1dcdd6dedfea0b8bd78c1d7137c354938d73c49e4448
