@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-test/qt-test-4.5.3.ebuild,v 1.2 2009/10/29 11:27:05 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qt-test/qt-test-4.6.0_rc1.ebuild,v 1.1 2009/11/18 20:52:11 wired Exp $
 
 EAPI=2
 inherit qt4-build
@@ -18,10 +18,6 @@ QT4_EXTRACT_DIRECTORIES="${QT4_TARGET_DIRECTORIES}
 include/QtTest/
 include/QtCore/
 src/corelib/"
-
-PATCHES=(
-	"${FILESDIR}/qt-4.5-nolibx11.diff"
-)
 
 src_configure() {
 	myconf="${myconf} $(qt_use iconv) -no-xkb  -no-fontconfig -no-xrender -no-xrandr
